# pochidetection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  quickstart.py  tmp_PR.md
.github/ISSUE_TEMPLATE/: documentation_request.md  feature_request.md  refactor_request.md  test_request.md
changelogs/: 0.1.x.md  0.10.x.md  0.11.x.md  0.12.x.md  0.13.x.md  0.14.x.md  0.15.x.md  0.16.x.md  0.17.x.md  0.18.x.md  0.2.x.md  0.3.x.md  0.4.x.md  0.5.x.md  0.6.x.md  0.7.x.md  0.8.x.md  0.9.x.md  README.md
configs/: __init__.py  _base.py  pretrained_rtdetr_coco.py  rtdetr_coco.py  ssd300_coco.py  ssdlite_coco.py
docs/: api-server.md  api_detect_inference_variance_investigation.md  augmentation.md  onnx_fp16_investigation.md  realtime_inference_clock_throttling.md  ssdlite_onnx_accuracy_investigation.md
docs/guides/: api-server.md  evaluation_metrics.md
docs/investigations/: ssdlite_onnx_fp16_speed_investigation.md
pochidetection/: __init__.py  trainer.py
pochidetection/api/: __init__.py  app.py  backends.py  config.py  constants.py  gpu_clock.py  gpu_metrics.py  log_format.py  schemas.py  serializers.py  state.py
pochidetection/cli/: __init__.py  main.py  parser.py  registry.py  rtdetr.py
pochidetection/configs/: __init__.py  schemas.py
pochidetection/core/: __init__.py  collate.py  detection.py  letterbox.py  preprocess.py  types.py
pochidetection/datasets/: __init__.py  augmentation.py  base_coco_dataset.py  coco_dataset.py  ssd_coco_dataset.py
pochidetection/factories/: __init__.py  component_factory.py
pochidetection/inference/: __init__.py  builder.py  onnx_backend.py  providers.py  pytorch_backend.py  ssdlite_onnx_backend.py  sync.py  tensorrt_backend.py  validation.py
pochidetection/interfaces/: __init__.py  backend.py  dataset.py  frame_sink.py  frame_source.py  loss.py  metrics.py  model.py  pipeline.py  plotter.py
pochidetection/logging/: __init__.py  logger_manager.py
pochidetection/losses/: __init__.py  detection_loss.py
pochidetection/metrics/: __init__.py  detection_metrics.py
pochidetection/models/: __init__.py  rtdetr.py  ssd300.py  ssd_base.py  ssdlite.py
pochidetection/onnx/: __init__.py  exporter.py  rtdetr_exporter.py  ssdlite_exporter.py  validation.py
pochidetection/orchestration/: __init__.py  batch_inference.py  reports.py
pochidetection/pipelines/: __init__.py  backend_factory.py  builder.py  context.py  model_path.py  rtdetr_pipeline.py  runtime.py  spec.py  ssd_pipeline.py
pochidetection/reporting/: __init__.py  detection_results_writer.py  saver.py  visualizer.py
pochidetection/scripts/: __init__.py
pochidetection/tensorrt/: __init__.py  calibrator.py  exporter.py  memory.py
pochidetection/training/: __init__.py  loop.py  ssd.py  validation.py
pochidetection/utils/: __init__.py  benchmark.py  category_utils.py  coco_utils.py  config_loader.py  config_resolver.py  device.py  early_stopping.py  history.py  infer_debug.py  map_evaluator.py  phased_timer.py  resource_monitor.py  scheduler.py  timer.py  video.py  work_dir.py
pochidetection/visualization/: __init__.py  color_palette.py  label_mapper.py  loss_plotter.py  metrics_plotter.py  training_report_plotter.py
tests/: __init__.py  conftest.py  test_coco_dataset.py  test_collate.py  test_component_factory.py  test_config_loader.py  test_detection_loss.py  test_detection_metrics.py  test_detector.py  test_history.py  test_interfaces.py  test_logger_manager.py  test_loss_plotter.py  test_main.py  test_metrics_plotter.py  test_pr_curve_plotter.py  test_timer.py  test_trainer.py  test_training_report_plotter.py  test_visualization.py  test_work_dir.py
tests/docs/: slow_tests.md  testing_guide.md
tests/test_api/: __init__.py  conftest.py  test_app.py  test_backends.py  test_bbox_consistency.py  test_detect_router.py  test_gpu_clock.py  test_gpu_metrics.py  test_model_info.py  test_schemas.py  test_serializers.py  test_serve_parser.py
tests/test_cli/: __init__.py  test_cli.py  test_cli_integration.py  test_prepare_demo.py  test_prepare_demo_parser.py  test_rtdetr_cli.py
tests/test_configs/: __init__.py  test_schemas.py
tests/test_core/: test_collate.py  test_letterbox.py  test_preprocess.py
tests/test_datasets/: test_augmentation.py  test_coco_dataset.py  test_letterbox_transform.py  test_ssd_coco_dataset.py
tests/test_inference/: __init__.py  conftest.py  test_detection_summary.py  test_onnx_backend.py  test_providers.py  test_pytorch_backend.py  test_rtdetr_pytorch_backend.py  test_ssd_pytorch_backend.py  test_sync.py  test_validation.py
tests/test_interfaces/: test_backend.py  test_interfaces.py
tests/test_logging/: test_logger_manager.py
tests/test_models/: test_rtdetr_model.py  test_ssd300_model.py  test_ssdlite_model.py
tests/test_onnx/: __init__.py  conftest.py  test_exporter.py  test_onnx_backend.py  test_rtdetr_exporter.py  test_rtdetr_onnx_backend.py  test_ssdlite_exporter.py  test_ssdlite_onnx_backend.py
tests/test_orchestration/: __init__.py  test_batch_inference.py
tests/test_pipelines/: __init__.py  test_builder.py  test_coco_pretrained.py  test_concurrency.py  (+7 more)
(+127 files in other folders)
