[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pochidetection"
version = "0.10.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "scipy",
    "torchmetrics[detection]",
    "colorlog",
    "plotly",
    "pydantic",
    "onnx",
    "onnxruntime-gpu",
]

[project.scripts]
pochi = "pochidetection.cli.main:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["work_dirs/"]

[[tool.mypy.overrides]]
module = "torchvision"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -n 6"
filterwarnings = [
    "ignore:.*legacy TorchScript-based ONNX export.*:DeprecationWarning",
    "ignore::torch.jit.TracerWarning",
    "ignore:.*The feature will be removed.*:DeprecationWarning",
    "ignore:.*Superseded by explicit quantization.*:DeprecationWarning",
]
